Bug 112656 - selected text is truncated in Calc sort dropdown
Summary: selected text is truncated in Calc sort dropdown
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.4.1.2 release
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.0.0 target:5.4.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: AutoFilter
  Show dependency treegraph
 
Reported: 2017-09-26 09:45 UTC by Andras Timar
Modified: 2017-10-22 06:30 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (88.92 KB, image/png)
2017-09-26 09:45 UTC, Andras Timar
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andras Timar 2017-09-26 09:45:48 UTC
Created attachment 136538 [details]
screenshot

Open sc/qa/unit/data/xls/tdf112501.xls. Click on the dropdown and notice that the selected text is truncated. 

Version: 6.0.0.0.alpha0+
Build ID: 302843bb6dc2c82de37015b6d444b1d7cbf33c1e
CPU threads: 8; OS: Linux 4.4; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); Calc: CL

Note: I did not see this with gtk2 backend or on Windows.
Comment 1 Eike Rathke (retired, only occasionally showing up) 2017-09-26 10:38:45 UTC
I can reproduce with any AutoFilter, already in 5.4.1
Comment 2 Xisco Faulí 2017-09-26 10:46:33 UTC
I can also reproduce it in gtk2

Version: 6.0.0.0.alpha0+
Build ID: 123408f3bfc8bf2e604167c019175050abf1726c
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

Regression introduced by:

author	Caolán McNamara <caolanm@redhat.com>	2017-07-14 13:40:47 (GMT)
committer	Caolán McNamara <caolanm@redhat.com>	2017-07-14 16:09:35 (GMT)
commit 6b6b81cae861a1e6463360d1b320c0d3e24de111 (patch)
tree f9b175978fbea8958cfbd434cd7c7df961141711
parent 3039b7cae36abb7e9bfffa4fbbba023721376568 (diff)
list views are recalculating layout on every paint
instead of when the font changes

since...

commit b4bbb5e5d7b31caad2fbcc00382ad27df3c81001
Date:   Sun May 17 22:56:46 2015 +0900

    refactor how font, fg. and bg. are applied in widgets/controls

Bisected with: bibisect-linux64-6.0

Adding Cc: to Caolán McNamara
Comment 3 Caolán McNamara 2017-09-27 20:18:00 UTC
the reverted fix was definitely wrong
Comment 4 Caolán McNamara 2017-09-27 20:20:24 UTC
maybe Tomaž has some ideas as to how this is supposed to fit together wrt the maChecks->SetFont(getLabelFont()); call in sc and SvTreeListBox::ApplySettings because we can't call AdjustEntryHeightAndRecalc to recalculate the bounding box of every entry in a list on every Paint realistically in long lists
Comment 5 Caolán McNamara 2017-09-28 13:36:02 UTC
https://gerrit.libreoffice.org/#/c/42910/ is my take on it
Comment 6 Commit Notification 2017-10-01 08:27:34 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3043863d688c5bbd5101ebd5ddd8a9452e05ca50

Resolves: tdf#112656 don't reset to default font if a custom font was set

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xavier Van Wijmeersch 2017-10-03 06:16:11 UTC
Confirm that its working

Version: 6.0.0.0.alpha0+
Build ID: e1f87cb067a058f34caaf61d86c79958eebfd0e4
CPU threads: 8; OS: Linux 4.9; UI render: default; VCL: kde4; 
Locale: nl-BE (en_US.UTF-8); Calc: group

Best regards
Comment 8 Commit Notification 2017-10-03 15:21:31 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f9c6022d109062d9b13339463f363892b2439d7d&h=libreoffice-5-4

Resolves: tdf#112656 don't reset to default font if a custom font was set

It will be available in 5.4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.