Resolves: tdf#112656 don't reset to default font if a custom font was set

the list has been laid out with the smaller custom font, including
calculating the bounding box of the entry, then rendered with the
default larger font

Change-Id: I2ae569c9857d4e1016cbf55da4c3334c63dcf5f6
Reviewed-on: https://gerrit.libreoffice.org/42910
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>
(cherry picked from commit 3043863d688c5bbd5101ebd5ddd8a9452e05ca50)